# ibm-storage-scale-mcp-server

./: README.md  pyproject.toml
config/: scale_config.ini.example
src/scale_mcp_server/: server.py
src/scale_mcp_server/adapters/: base.py  cli_executor.py  local_executor.py  ssh_executor.py
src/scale_mcp_server/tools/cli/: policies.py
src/scale_mcp_server/tools/v3/: policies.py
src/scale_mcp_server/utils/: helpers.py
