[project]
name = "scale-mcp-server"
version = "1.0.0"
description = "IBM Storage Scale MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "fastmcp>=3.1.0",
 "paramiko>=4.0.0",
]

[build-system]
requires = ["uv_build>=0.10.0"]
build-backend = "uv_build"

[project.scripts]
scale-mcp-server = "scale_mcp_server:main"
